cargo-features = [
    "per-package-target",
]

[package]
name = "qemu-example"
version = "0.1.0"
edition = "2021"
forced-target = "armv7a-none-eabi"

[dependencies]
static_cell = "1"
critical-section = "1"
defmt = "0.3"
fdt = "0.1"
linked_list_allocator = "0.10"

[dependencies.cortex-a-rt]
path = "external/cortex-a-rt"
features = [
    "single-core-critical-section",
    "defmt",
    "panic_handler",
    "unwind",
]

[dependencies.pl011]
path = "pl011"

[dependencies.gicv2]
path = "external/gicv2"

[dependencies.generic-timer]
path = "external/generic-timer"
features = ["embassy_cp15"]

[dependencies.embassy-futures]
path = "external/embassy/embassy-futures"

[dependencies.embassy-sync]
path = "external/embassy/embassy-sync"

[dependencies.embassy-time]
path = "external/embassy/embassy-time"

[dependencies.embassy-executor]
path = "external/embassy/embassy-executor"
features = ["nightly", "integrated-timers"]

[dependencies.futures-util]
version = "0.3"
default-features = false

[profile.dev]
panic = "unwind"

[patch.crates-io.gimli]
path = "external/gimli"
